# slycache

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  .pylintrc  .style.yapf  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  pre_release.yml  python-package.yml  release.yml
api/: index.html
changelog/: index.html
docs/: api.md  api.rst  changelog.md  conf.py  frameworks.rst  index.md  index.rst  installation.rst  license.md  modules.rst  usage.rst
docs/_templates/: sidebarintro.html
license/: index.html
slycache/: __init__.py  actions.py  const.py  exceptions.py  interface.py  invocations.py  key_generator.py  slycache.py
slycache/ext/django/: app.py
src/slycache/: __init__.py  actions.py  const.py  interface.py  invocations.py  key_generator.py  slycache.py
src/slycache/ext/django/: __init__.py  apps.py
src/slycache/ext/flask/: __init__.py
tests/: __init__.py  conftest.py  mock_cache.py  test_api.py  test_caches.py  test_key_generator.py  test_service.py  test_slycache.py
tests/ext/: services.py  test_cases.py
tests/ext/django/: settings.py  tests.py
tests/ext/flask/: tests.py
tests/performance/: run_performance_profile.py  test_performance.py
