[project]
name = "slycache"
version = "0.3.0"
description = "Service caching API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
flask = [
    "flask-caching>=2.3.0",
]
django = [
    "django>=5.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --doctest-modules"
python_files = "tests.py test_*.py *_tests.py"
log_level = "debug"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]
