[project]
name = "slycache"
version = "0.3.1"
description = "Service caching API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
homepage = "https://github.com/snopoke/slycache"
authors = [
    { name = "Simon Kelly", email = "simongdkelly@gmail.com" }
]
license = "BSD-3-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Framework :: Django',
    'Framework :: Flask'
]

[project.optional-dependencies]
flask = [
    "flask-caching>=2.3.0",
]
django = [
    "django>=5.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --doctest-modules"
python_files = "tests.py test_*.py *_tests.py"
log_level = "debug"

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-randomly>=3.16.0",
    "ruff>=0.9.1",
]
docs = [
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
    "pymdown-extensions>=10.14",
]


[bumpver]
current_version = "0.3.0"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"$',
]
"src/slycache/__init__.py" = [
    '^__version__ = "{version}"$',
]
